<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">GymLog FitBody</string>
    <string name="title_activity_main">GymLog FitBody</string>
    <string name="package_name">com.franvi.gymlog</string>
    <string name="custom_url_scheme">com.franvi.gymlog</string>
    <string name="shortcut_new_workout_short">Nuevo Entreno</string>
    <string name="shortcut_new_workout_long">Registrar nuevo entrenamiento</string>
    <string name="shortcut_stats_short">Estadísticas</string>
    <string name="shortcut_stats_long">Ver progreso y estadísticas</string>
    <string name="shortcut_disabled_message">Acceso directo no disponible</string>
    <string name="widget_streak_caption">días de racha</string>
    <string name="widget_no_data">Empieza hoy</string>
    <string name="widget_label">Racha GymLog</string>
    <string name="widget_add_content">Nuevo entreno</string>
    <string name="widget_today_caption">HOY TOCA</string>
    <string name="widget_today_rest">Descanso</string>
    <string name="widget_today_done">Entreno hecho</string>
    <string name="widget_today_start">Empezar</string>
    <string name="widget_today_label">Entreno de hoy</string>
    <string name="widget_updated_at">Actualizado %1$s</string>
</resources>
